deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring
spec:
  revisionHistoryLimit: 5
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      exporter: kube-state-metrics
  template:
    metadata:
      name: kube-state-metrics
      labels:
        exporter: kube-state-metrics
    spec:
      serviceAccountName: kube
      containers:
        - name: kube-state-metrics
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.16.0
          ports:
            - name: metrics
              containerPort: 8080
            - name: http
              containerPort: 8081
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
            httpGet:
              path: /healthz
              port: 8080
        - name: addon-resizer
          image: registry.k8s.io/addon-resizer:1.8.14
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 150m
              memory: 300Mi
          command:
            - /pod_nanny
            - --container=kube-state-metrics
            - --cpu=100m
            - --extra-cpus=1m
            - --memory=100Mi
            - --extra-memory=10Mi
            - --deployment=kube-state-metrics
