service-prometheus.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    name: prometheus-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
